--- a/css/header-image.css
+++ b/css/header-image.css
@@ -1,5 +1,7 @@
-.header-image{
+#header-image{
   width: 100%;
   height: 320px;
   background-color: lightgray;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
