--- a/css/header-image.css
+++ b/css/header-image.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap');
+
 #header-image{
   width: 100%;
   height: 320px;
@@ -5,4 +7,21 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+
+.text{
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  padding: 16px;
+  line-height: 0.3;
+}
+
+.city-header{
+  font-size: 64px;
+  font-weight: bold;
+}
+
+.text h3{
+  font-size: 40px;
+  font-weight: lighter;
 }
