--- a/css/header-image.css
+++ b/css/header-image.css
@@ -14,6 +14,7 @@
   font-family: 'Roboto', sans-serif;
   padding: 16px;
   line-height: 0.3;
+  padding-left: 104px;
 }
 
 .city-header{
@@ -25,3 +26,4 @@
   font-size: 40px;
   font-weight: lighter;
 }
+
