added miniature image to the info card

--- a/css/card.css
+++ b/css/card.css
@@ -8,10 +8,10 @@
   text-align: center;
 }
 
-.card-image{
+#card-image{
   width: 456px;
   height: 304px;
-  object-fit: cover;
+  background-size: cover;
 }
 
 .facts{
