--- a/css/news.css
+++ b/css/news.css
@@ -3,14 +3,46 @@
 }
 
 .main-news{
-  width: 736px;
+  width: 728px;
   height: auto;
   background-color: #ECEAEA;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+  margin-right: 8px;
 }
 .news-headers{
-  width: 480px;
-  height: auto;
+  width: 100%;
+  height: 200px;
   background-color: #ECEAEA;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#main-news-img{
+  width: 728px;
+  height: 456px;
+  object-fit: cover;
+}
+
+.news-details{
+  padding: 24px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.news-details h3{
+  font-size: 32px;
+}
+
+.container{
+  padding:0%
+  8px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.news-headers-img{
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+}
+
+.noticias{
+  display: flex;
 }
