--- a/css/card.css
+++ b/css/card.css
@@ -1,11 +1,11 @@
 .card{
   width: 456px;
-  background-color: #ECEAEA;
   border-radius: 8px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   font-family: 'Roboto', sans-serif;
   font-size: 24px;
   text-align: center;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
 #card-image{
@@ -32,6 +32,5 @@
   color: #E8E6E6;
   font-family: 'Jomhuria';
   background-color: #333333;
-  padding: 16px;
-  border-radius: 24px;
+  padding: 10px;
 }
