--- a/css/news.css
+++ b/css/news.css
@@ -5,15 +5,14 @@
 .main-news{
   width: 728px;
   height: auto;
-  background-color: #ECEAEA;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
   margin-right: 8px;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 .news-headers{
   width: 100%;
-  height: 200px;
-  background-color: #ECEAEA;
+  height: auto;
 }
 
 #main-news-img{
@@ -23,7 +22,7 @@
 }
 
 .news-details{
-  padding: 24px;
+  padding: 8px;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -38,11 +37,47 @@
 }
 
 .news-headers-img{
-  width: 200px;
-  height: 200px;
+  width: 120px;
+  height: 120px;
   object-fit: cover;
 }
 
 .noticias{
   display: flex;
+}
+
+.card-product {
+  overflow: hidden;
+  height: 120px;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.card-product img {
+  height: 100%;
+  width: 120px;
+  object-fit: cover;
+}
+
+.card-product h2 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.card-product p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: 8px;
+}
+
+.card-product .card-product-infos {
+  padding: 16px;
 }
