--- a/css/style.css
+++ b/css/style.css
@@ -40,16 +40,22 @@ a{
   font-family: 'Jomhuria';
   font-size: 35px;
   font-weight: normal;
-  border-bottom: 5px solid #333333; 
+  border-bottom: 5px solid #333333;
   line-height: 0.1em;
-  margin: 10px 0 20px; 
+  margin: 10px 0 20px;
 }
 
-.title h5 span { 
-  background:#E8E6E6; 
-  padding:0 10px; 
+.title h5 span {
+  background:#E8E6E6;
+  padding:0 10px;
 }
 
 #hide{
   visibility: hidden;
+  display: none;
+}
+
+#map{
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
